# Number-Guessing-Game

./: .prettierignore  .prettierrc  Manual.md  main.py  pyproject.toml
src/v1/: NumberGuessingGame.py  system.py  user_guess.py
src/v2/: NumberGuessingGame.py  computer_secret.py  user_guess.py
src/v3/: NumberGuessingGame.py  ais.py  computers.py  user_guess.py  users.py
src/v4/: NumberGuessingGame.py  aiVsUser.py  computers.py  online.py  user_guess.py  users.py
src/v5/: NumberGuessingGame.py  computer_secret.py  online.py  user_guess.py  users.py
src/v6/: NumberGuessingGame.py  aiVsUser.py  ais.py  onlineApp.py  user_guess.py  users.py
